--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,42 @@
 .topbarNav{
     display: flex;
-    background-color: white;
+    background-color: darkcyan;
+    margin-left: 50px;
+}
+
+
+.main{
+    display: flex;
+    flex-direction:row;
+    gap: 20px;
+    background-color: whitesmoke;
+    width: 80%;
+    height: auto;
+    justify-content: center;
+    padding: 2rem;
+    margin-inline-start: 20px;
+    
+}
+#name{
+    width: 300px;
+    height: 40px;
+    gap: 2px;   
+}
+
+#content{
+    width: 400px;
+    height: 100px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align:auto;
+}
+
+
+#viewPost{
+
+}
+
+.rightside{
+ width: 500px;
+ height: 500px;
+    background-color:darkgrey;
 }
